[workspace]
members = ["packages/index"]
exclude = []
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2021"
authors = ["mtn81 <nantsuka2011@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/mtn81/leptos-ezs"

[workspace.dependencies.leptos-ezs-core]
path = "packages/core"
version = "0.0.0"

[workspace.dependencies.leptos-ezs-macros]
path = "packages/macros"
version = "0.0.0"
